--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,7 +11,8 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
         </button>
-        <a class="navbar-brand with-logo" href="#"><img src="/favicon.ico" alt=""></a>
+        <!-- <a class="navbar-brand with-logo" href="#"><img src="/favicon.ico" alt=""></a> -->
+        <img class="navbar-brand with-logo" src="/favicon.ico" alt="">
       </div>
 
       <div class="collapse navbar-collapse" id="myNavbar">
