changed home page display.
- re generated bootstrap.css

--- a/src/kingshark386.scss
+++ b/src/kingshark386.scss
@@ -228,7 +228,7 @@ body.page-index{
   section.home-nav ul{
     position: fixed;
     right: 0;
-    top: 10%;
+    top: 100px;
     width: 10rem;
     // min-width: 5rem;
     margin-top: -2.5rem;
