fixed a bug happend for hugo newest version v0.68.3

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -12,8 +12,7 @@
   {{ partial "header.html" . }}
   <div class="container">
     <section class="posts my-card">
-      {{ $paginator := .Paginate (.Data.Pages.GroupByDate "2006-01") }} 
-      {{ range $paginator.PageGroups }}
+      {{ range .Pages.GroupByDate "2006-01" }}
       <div class="posts-archive">
         {{ $month := (print .Key "-01") }}
         <time class="posts-archive-month" datetime="{{ $month }}">{{ dateFormat "Jan 2006" $month }}</time>
