applied bootstrap them changes and other
- changed gulp file default

- change skill bar style

- changed readme

--- a/src/_skillbar.scss
+++ b/src/_skillbar.scss
@@ -19,7 +19,7 @@ $skill-bar-height: 1rem;
         display:block;
         margin-bottom:.5rem;
         width:100%;
-        background:gray;
+        background:lightgray;
         height:$skill-bar-height;
         border-radius:3px;
         -moz-border-radius:3px;
