--- a/static/css/kingshark386.css
+++ b/static/css/kingshark386.css
@@ -1876,7 +1876,7 @@ hr {
   margin-top: 22px;
   margin-bottom: 22px;
   border: 0;
-  border-top: 1px solid #bbb;
+  border-top: 1px solid gray;
 }
 
 /* line 131, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_scaffolding.scss */
@@ -1932,7 +1932,7 @@ h6 .small,
 .h6 .small {
   font-weight: normal;
   line-height: 1;
-  color: #bbb;
+  color: gray;
 }
 
 /* line 24, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_type.scss */
@@ -2082,7 +2082,7 @@ mark,
 
 /* line 102, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_type.scss */
 .text-muted {
-  color: #bbb;
+  color: gray;
 }
 
 /* line 5, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_text-emphasis.scss */
@@ -2204,7 +2204,7 @@ a.bg-danger:focus {
 .page-header {
   padding-bottom: 10px;
   margin: 44px 0 22px;
-  border-bottom: 1px solid #bbb;
+  border-bottom: 1px solid gray;
 }
 
 /* line 149, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_type.scss */
@@ -2296,7 +2296,7 @@ dd {
 abbr[title],
 abbr[data-original-title] {
   cursor: help;
-  border-bottom: 1px dotted #bbb;
+  border-bottom: 1px dotted gray;
 }
 
 /* line 235, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_type.scss */
@@ -2309,7 +2309,7 @@ blockquote {
   padding: 11px 22px;
   margin: 0 0 22px;
   font-size: 20px;
-  border-left: 5px solid #bbb;
+  border-left: 5px solid gray;
 }
 
 /* line 250, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_type.scss */
@@ -2326,7 +2326,7 @@ blockquote .small {
   display: block;
   font-size: 80%;
   line-height: 1.42857;
-  color: #bbb;
+  color: gray;
 }
 
 /* line 265, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_type.scss */
@@ -2341,7 +2341,7 @@ blockquote .small:before {
 blockquote.pull-right {
   padding-right: 15px;
   padding-left: 0;
-  border-right: 5px solid #bbb;
+  border-right: 5px solid gray;
   border-left: 0;
   text-align: right;
 }
@@ -3425,7 +3425,7 @@ table {
 caption {
   padding-top: 8px;
   padding-bottom: 8px;
-  color: #bbb;
+  color: gray;
   text-align: left;
 }
 
@@ -3807,7 +3807,7 @@ output {
   font-size: 16px;
   line-height: 1.42857;
   color: #000;
-  background-color: #bbb;
+  background-color: gray;
   background-image: none;
   border: 1px solid #ccc;
   border-radius: 0;
@@ -3816,7 +3816,7 @@ output {
   -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-  background: #bbb;
+  background: gray;
   margin-right: 1rem;
   margin-bottom: 1rem;
   -webkit-box-shadow: 0.5rem 0.5rem 0 #000;
@@ -3866,7 +3866,7 @@ output {
 /* line 154, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_forms.scss */
 .form-control[disabled], .form-control[readonly],
 fieldset[disabled] .form-control {
-  background-color: #bbb;
+  background-color: gray;
   opacity: 1;
 }
 
@@ -4478,7 +4478,7 @@ select[multiple].input-lg,
 
 /* line 9, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_buttons.scss */
 .btn {
-  background: #bbb;
+  background: gray;
   color: #555;
   display: inline-block;
   font-weight: normal;
@@ -4546,26 +4546,26 @@ fieldset[disabled] a.btn {
 /* line 74, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_buttons.scss */
 .btn-default {
   color: #555;
-  background-color: #bbb;
+  background-color: gray;
 }
 
 /* line 13, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_buttons.scss */
 .btn-default:focus, .btn-default.focus {
   color: #555;
-  background-color: #a2a2a2;
+  background-color: #676767;
 }
 
 /* line 19, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_buttons.scss */
 .btn-default:hover {
   color: #555;
-  background-color: #a2a2a2;
+  background-color: #676767;
 }
 
 /* line 24, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_buttons.scss */
 .btn-default:active, .btn-default.active,
 .open > .btn-default.dropdown-toggle {
   color: #555;
-  background-color: #a2a2a2;
+  background-color: #676767;
 }
 
 /* line 31, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_buttons.scss */
@@ -4574,7 +4574,7 @@ fieldset[disabled] a.btn {
 .open > .btn-default.dropdown-toggle:focus,
 .open > .btn-default.dropdown-toggle.focus {
   color: #555;
-  background-color: #909090;
+  background-color: #555555;
 }
 
 /* line 39, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_buttons.scss */
@@ -4588,12 +4588,12 @@ fieldset[disabled] a.btn {
 fieldset[disabled] .btn-default:hover,
 fieldset[disabled] .btn-default:focus,
 fieldset[disabled] .btn-default.focus {
-  background-color: #bbb;
+  background-color: gray;
 }
 
 /* line 55, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_buttons.scss */
 .btn-default .badge {
-  color: #bbb;
+  color: gray;
   background-color: #555;
 }
 
@@ -4897,7 +4897,7 @@ fieldset[disabled] .btn-link {
 .btn-link[disabled]:hover, .btn-link[disabled]:focus,
 fieldset[disabled] .btn-link:hover,
 fieldset[disabled] .btn-link:focus {
-  color: #bbb;
+  color: gray;
   text-decoration: none;
 }
 
@@ -5027,14 +5027,14 @@ tbody.collapse.in {
   list-style: none;
   font-size: 16px;
   text-align: left;
-  background-color: #bbb;
+  background-color: gray;
   border: 1px solid #ccc;
   border: 1px solid #000;
   border-radius: 0;
   -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   background-clip: padding-box;
-  box-shadow: 0px 0px 0 5px #bbb;
+  box-shadow: 0px 0px 0 5px gray;
 }
 
 /* line 59, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_dropdowns.scss */
@@ -5503,7 +5503,7 @@ tbody.collapse.in {
   line-height: 1;
   color: #000;
   text-align: center;
-  background-color: #bbb;
+  background-color: gray;
   border: 1px solid #ccc;
   border-radius: 0;
 }
@@ -5635,17 +5635,17 @@ tbody.collapse.in {
 /* line 23, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_navs.scss */
 .nav > li > a:hover, .nav > li > a:focus {
   text-decoration: none;
-  background-color: #bbb;
+  background-color: gray;
 }
 
 /* line 31, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_navs.scss */
 .nav > li.disabled > a {
-  color: #bbb;
+  color: gray;
 }
 
 /* line 34, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_navs.scss */
 .nav > li.disabled > a:hover, .nav > li.disabled > a:focus {
-  color: #bbb;
+  color: gray;
   text-decoration: none;
   background-color: transparent;
   cursor: not-allowed;
@@ -5653,7 +5653,7 @@ tbody.collapse.in {
 
 /* line 46, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_navs.scss */
 .nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
-  background-color: #bbb;
+  background-color: gray;
   border-color: #FEFE54;
 }
 
@@ -5691,12 +5691,12 @@ tbody.collapse.in {
 
 /* line 89, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_navs.scss */
 .nav-tabs > li > a:hover {
-  border-color: #bbb #bbb #ddd;
+  border-color: gray gray #ddd;
 }
 
 /* line 96, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_navs.scss */
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
-  color: #bbb;
+  color: gray;
   background-color: #000084;
   border: 1px solid #ddd;
   border-bottom-color: transparent;
@@ -6605,7 +6605,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > span:focus {
   z-index: 2;
   color: #fefe08;
-  background-color: #bbb;
+  background-color: gray;
   border-color: #ddd;
 }
 
@@ -6615,7 +6615,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > span:hover,
 .pagination > .active > span:focus {
   z-index: 3;
-  color: #bbb;
+  color: gray;
   background-color: #f5f5f5;
   border-color: #ddd;
   cursor: default;
@@ -6628,7 +6628,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .disabled > a,
 .pagination > .disabled > a:hover,
 .pagination > .disabled > a:focus {
-  color: #bbb;
+  color: gray;
   background-color: #fff;
   border-color: #ddd;
   cursor: not-allowed;
@@ -6716,7 +6716,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pager li > a:hover,
 .pager li > a:focus {
   text-decoration: none;
-  background-color: #bbb;
+  background-color: gray;
 }
 
 /* line 31, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_pager.scss */
@@ -6736,7 +6736,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pager .disabled > a:hover,
 .pager .disabled > a:focus,
 .pager .disabled > span {
-  color: #bbb;
+  color: gray;
   background-color: #008000;
   cursor: not-allowed;
 }
@@ -6775,13 +6775,13 @@ a.label:hover, a.label:focus {
 
 /* line 44, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_labels.scss */
 .label-default {
-  background-color: #bbb;
+  background-color: gray;
   color: #555;
 }
 
 /* line 7, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_labels.scss */
 .label-default[href]:hover, .label-default[href]:focus {
-  background-color: #a2a2a2;
+  background-color: #676767;
 }
 
 /* line 49, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_labels.scss */
@@ -7379,7 +7379,7 @@ button.list-group-item {
 
 /* line 70, src/lib/bootstrap-sass/assets/stylesheets/bootstrap/_list-group.scss */
 .list-group-item.disabled, .list-group-item.disabled:hover, .list-group-item.disabled:focus {
-  background-color: #bbb;
+  background-color: gray;
   color: #555;
   cursor: not-allowed;
 }
@@ -9417,7 +9417,7 @@ pre code {
   display: block;
   margin-bottom: .5rem;
   width: 100%;
-  background: gray;
+  background: lightgray;
   height: 1rem;
   border-radius: 3px;
   -moz-border-radius: 3px;
@@ -9648,7 +9648,7 @@ pre code {
 
 /* line 224, src/_experience.scss */
 .kingshark-timeline .cd-timeline-block.cd-exp-type-edu .cd-timeline-content .cd-exp-date {
-  color: #bbb;
+  color: gray;
 }
 
 @media only screen and (min-width: 1170px) {
@@ -9944,7 +9944,7 @@ blockquote {
   padding: 1rem;
   box-sizing: border-box;
   box-shadow: 15px 15px rgba(0, 0, 0, 0.5);
-  background: #bbb;
+  background: gray;
   color: #000;
   text-align: left;
   margin-bottom: 5rem;
@@ -10043,7 +10043,7 @@ body.page-index section.home-nav ul {
 
 /* line 237, src/kingshark386.scss */
 body.page-index section.home-nav ul li {
-  background: #bbb;
+  background: gray;
   margin: 0.5rem;
   padding: 0.5rem;
   text-align: right;
