added tags display

--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -11,29 +11,37 @@
   
   {{ partial "header.html" . }}
   <div class="container">
-    <section class="posts my-card">
-      {{ $paginator := .Paginate (.Data.Pages.GroupByDate "2006-01") }} 
-      {{ range $paginator.PageGroups }}
-      <div class="posts-archive">
-        <div class="panel panel-default">
-          <div class="panel-body">
-            {{ $month := (print .Key "-01") }}
-            <time class="posts-archive-month" datetime="{{ $month }}">{{ dateFormat "Jan 2006" $month }}</time>
-            <ol class="posts-list">
-                  {{ range .Pages }}
-                  <li>
-                    <span class="post-date">{{ dateFormat "2006-01-02 " .Date }}</span>
-                    <i class="fa fa-file-text" aria-hidden="true"></i>
-                    <a href="{{ .Permalink }}">{{ .Title }}</a>
-                  </li>
-                  {{ end }}
-            </ol>
+
+    <div class="col-sm-3">
+      {{ partial "post_tags.html" . }}
+    </div>
+
+    <div class="col-sm-9">
+      <section class="posts my-card">
+        {{ $paginator := .Paginate (.Data.Pages.GroupByDate "2006-01") }} 
+        {{ range $paginator.PageGroups }}
+        <div class="posts-archive">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              {{ $month := (print .Key "-01") }}
+              <time class="posts-archive-month" datetime="{{ $month }}">{{ dateFormat "Jan 2006" $month }}</time>
+              <ol class="posts-list">
+                    {{ range .Pages }}
+                    <li>
+                      <span class="post-date">{{ dateFormat "2006-01-02 " .Date }}</span>
+                      <i class="fa fa-file-text" aria-hidden="true"></i>
+                      <a href="{{ .Permalink }}">{{ .Title }}</a>
+                    </li>
+                    {{ end }}
+              </ol>
+            </div>
           </div>
         </div>
-      </div>
-      {{ end }}
-    </section>
-    {{ partial "pagination.html" . }}
+        {{ end }}
+        {{ partial "pagination.html" . }}
+      </section>
+
+    </div>
   </div>
   
   {{ partial "footer.html" . }}
